--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cyborg</title>
+    <title>Cyborg IT Technology</title>
+    <link rel="shortcut icon" href="/src/assets/images/logo/fav.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
