--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cyborg IT Technology</title>
-    <link rel="shortcut icon" href="/src/assets/images/logo/Cyborg-logo 11-11.png" type="image/x-icon">
+    <meta name="description" content="High-quality IT solutions, consulting, and web development services.">
+    <link
+      rel="shortcut icon"
+      href="/src/assets/images/logo/Cyborg-logo 11-11.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="root"></div>
