--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -19,7 +20,7 @@
         var f=d.getElementsByTagName(s)[0],
             j=d.createElement(s), dl=l!='dataLayer'?'&l='+l:'';
         j.async=true;
-        j.src=`https://www.googletagmanager.com/gtm.js?id=${'%VITE_GTM_ID%'}${dl}`;
+        j.src=`https://www.googletagmanager.com/gtm.js?id=%VITE_GTM_ID%${dl}`;
         f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','%VITE_GTM_ID%');
     </script>
