fix preview image

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+<!-- src/index.html -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -25,11 +25,19 @@
       })(window,document,'script','dataLayer','%VITE_GTM_ID%');
     </script>
     <!-- End Google Tag Manager -->
+    
+    <!-- Default Open Graph Meta Tags -->
+    <meta property="og:title" content="Cyborg IT Technology" />
+    <meta property="og:description" content="High-quality IT solutions, consulting, and web development services." />
+    <meta property="og:image" content="https://cyborg-it.de/images/default-og-image.jpg" />
+    <meta property="og:url" content="https://cyborg-it.de/de" />
+    <meta property="og:type" content="website" />
+    <link rel="canonical" href="https://cyborg-it.de/de" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=%VITE_GTM_ID%"
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MLKPSBWZ"
         height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
