fix precview image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Corrected favicon path -->
     <link
       rel="shortcut icon"
-      href="/assets/images/logo/Cyborg-logo%2011-11.png"
+      href="./src/assets/images/logo/Cyborg-logo 11-11.png"
       type="image/x-icon"
     />
 
@@ -50,7 +50,7 @@
     <!-- Default Open Graph Meta Tags -->
     <meta property="og:title" content="Cyborg IT Technology" />
     <meta property="og:description" content="High-quality IT solutions, consulting, and web development services." />
-    <meta property="og:image" content="https://cyborg-it.de/assets/images/default-og-image.jpg" />
+    <meta property="og:image" content="https://cyborg-it.de/assets/og-image.jpg" />
     <meta property="og:url" content="https://cyborg-it.de/de" />
     <meta property="og:type" content="website" />
     <link rel="canonical" href="https://cyborg-it.de/de" />
