--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <link rel="canonical" href="https://cyborg-it.de/de" />
 
     <!-- Preload Critical Fonts -->
-    <link rel="preload" href="/assets/fonts/Overpass-Medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/assets/fonts/Syne-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <!-- <link rel="preload" href="/assets/fonts/Overpass-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/Syne-Bold.woff2" as="font" type="font/woff2" crossorigin> -->
 
   </head>
   <body>
