--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- src/index.html -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -38,10 +37,7 @@
       // Define the gtagSendEvent function
       window.gtagSendEvent = function() {
         gtag('event', 'conversion_event_submit_lead_form_4', {
-          // Add any additional event parameters here if needed
-          // Example:
-          // 'value': 1.0,
-          // 'currency': 'USD'
+          // Additional event parameters can be added here
         });
       };
     </script>
@@ -59,6 +55,20 @@
     <!-- <link rel="preload" href="/assets/fonts/Overpass-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/Syne-Bold.woff2" as="font" type="font/woff2" crossorigin> -->
 
+    <!-- Optional: CSS for Visually Hidden Elements -->
+    <style>
+      .visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        white-space: nowrap;
+        border: 0;
+      }
+    </style>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -67,6 +77,9 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Visually hidden H1 for SEO -->
+    <h1 class="visually-hidden">Cyborg IT Technology</h1>
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
